Entrega2/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC
Rule 2     auxprogram -> vars auxprogram
Rule 3     auxprogram -> function auxprogram
Rule 4     auxprogram -> empty
Rule 5     array -> ID LFTBRACSQR exp RGTBRACSQR
Rule 6     arrayvalues -> LFTBRACSQR arrayvaluesaux RGTBRACSQR
Rule 7     arrayvaluesaux -> constant
Rule 8     arrayvaluesaux -> constant COMMA arrayvaluesaux
Rule 9     assignment -> assignmentaux EQUAL expression SEMICOLON
Rule 10    assignmentaux -> ID
Rule 11    assignmentaux -> array
Rule 12    blockreturn -> LFTBRAC blockneutral RGTBRAC
Rule 13    blockreturn -> LFTBRAC blockneutral RETURN exp SEMICOLON RGTBRAC
Rule 14    blockneutral -> statement blockneutral
Rule 15    blockneutral -> vars blockneutral
Rule 16    blockneutral -> empty
Rule 17    block -> LFTBRAC blockneutral RGTBRAC
Rule 18    condition -> IF conditionaux
Rule 19    condition -> IF conditionaux ELSE block
Rule 20    conditionaux -> LFTPAREN expression RGTPAREN block conditionaux2
Rule 21    conditionaux2 -> ELSEIF conditionaux
Rule 22    conditionaux2 -> empty
Rule 23    constant -> ID
Rule 24    constant -> array
Rule 25    constant -> cteN
Rule 26    constant -> cteS
Rule 27    constant -> TRUE
Rule 28    constant -> FALSE
Rule 29    constant -> call2
Rule 30    cteN -> FLOAT
Rule 31    cteN -> INT
Rule 32    cteS -> STRING
Rule 33    exp -> term expaux
Rule 34    expaux -> PLUS exp expaux
Rule 35    expaux -> MINUS exp expaux
Rule 36    expaux -> empty
Rule 37    factor -> LFTPAREN expression RGTPAREN
Rule 38    factor -> constant
Rule 39    factor -> MINUS constant
Rule 40    factor -> PLUS constant
Rule 41    expression -> exp
Rule 42    expression -> exp expressionaux exp
Rule 43    expressionaux -> AND
Rule 44    expressionaux -> DOUBEQUAL
Rule 45    expressionaux -> NOT
Rule 46    expressionaux -> OR
Rule 47    expressionaux -> LESSTHANEQUAL
Rule 48    expressionaux -> GREATTHANEQUAL
Rule 49    expressionaux -> GREATTHAN
Rule 50    expressionaux -> LESSTHAN
Rule 51    loop -> WHILE LFTPAREN expression RGTPAREN block
Rule 52    write -> PRINT LFTPAREN constant RGTPAREN SEMICOLON
Rule 53    parameter -> type ID codeAddParameters
Rule 54    parameter -> type ID codeAddParameters COMMA parameter
Rule 55    parameter -> empty
Rule 56    term -> factor termaux
Rule 57    termaux -> MULTIPLICATION term termaux
Rule 58    termaux -> DIVISION term termaux
Rule 59    termaux -> empty
Rule 60    statement -> assignment
Rule 61    statement -> condition
Rule 62    statement -> loop
Rule 63    statement -> write
Rule 64    statement -> read
Rule 65    statement -> call
Rule 66    type -> INT checkType
Rule 67    type -> FLOAT checkType
Rule 68    type -> CHAR checkType
Rule 69    type -> BOOL checkType
Rule 70    type -> STRING checkType
Rule 71    main -> PRIOMH codeScope block
Rule 72    function -> FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
Rule 73    functionaux -> VOID codeTypeVoid checkType
Rule 74    functionaux -> funcIndicator type
Rule 75    vars -> type varsaux
Rule 76    varsaux -> ID codeAddVar EQUAL expression SEMICOLON
Rule 77    varsaux -> ID codeAddVar EQUAL expression COMMA varsaux
Rule 78    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
Rule 79    varsaux -> ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux
Rule 80    call -> ID LFTPAREN exp callaux RGTPAREN SEMICOLON
Rule 81    callaux -> COMMA exp callaux
Rule 82    callaux -> empty
Rule 83    call2 -> ID LFTPAREN exp callaux RGTPAREN
Rule 84    read -> READ LFTPAREN readaux RGTPAREN SEMICOLON
Rule 85    readaux -> ID
Rule 86    readaux -> array
Rule 87    empty -> <empty>
Rule 88    codeScope -> <empty>
Rule 89    checkType -> <empty>
Rule 90    codeAddVar -> <empty>
Rule 91    codeAddVarArreglo -> <empty>
Rule 92    codeAddParameters -> <empty>
Rule 93    codeNameOfFunct -> <empty>
Rule 94    codeTypeVoid -> <empty>
Rule 95    funcIndicator -> <empty>

Terminals, with rules where they appear

AND                  : 43
BOOL                 : 69
CHAR                 : 68
COMMA                : 8 54 77 79 81
DIVISION             : 58
DOUBEQUAL            : 44
ELSE                 : 19
ELSEIF               : 21
EQUAL                : 9 76 77 78 79
FALSE                : 28
FLOAT                : 30 67
FUNCTION             : 72
GREATTHAN            : 49
GREATTHANEQUAL       : 48
ID                   : 1 5 10 23 53 54 72 76 77 78 79 80 83 85
IF                   : 18 19
INT                  : 31 66 78 79
LESSTHAN             : 50
LESSTHANEQUAL        : 47
LFTBRAC              : 1 12 13 17
LFTBRACSQR           : 5 6 78 79
LFTPAREN             : 20 37 51 52 72 80 83 84
MINUS                : 35 39
MULTIPLICATION       : 57
NOT                  : 45
OR                   : 46
PLUS                 : 34 40
PRINT                : 52
PRIOMH               : 71
PROGRAM              : 1
READ                 : 84
RETURN               : 13
RGTBRAC              : 1 12 13 17
RGTBRACSQR           : 5 6 78 79
RGTPAREN             : 20 37 51 52 72 80 83 84
SEMICOLON            : 9 13 52 76 78 80 84
STRING               : 32 70
TRUE                 : 27
VOID                 : 73
WHILE                : 51
error                : 

Nonterminals, with rules where they appear

array                : 11 24 86
arrayvalues          : 78 79
arrayvaluesaux       : 6 8
assignment           : 60
assignmentaux        : 9
auxprogram           : 1 2 3
block                : 19 20 51 71
blockneutral         : 12 13 14 15 17
blockreturn          : 72
call                 : 65
call2                : 29
callaux              : 80 81 83
checkType            : 66 67 68 69 70 73
codeAddParameters    : 53 54
codeAddVar           : 76 77
codeAddVarArreglo    : 78 79
codeNameOfFunct      : 72
codeScope            : 71 72 72
codeTypeVoid         : 73
condition            : 61
conditionaux         : 18 19 21
conditionaux2        : 20
constant             : 7 8 38 39 40 52
cteN                 : 25
cteS                 : 26
empty                : 4 16 22 36 55 59 82
exp                  : 5 13 34 35 41 42 42 80 81 83
expaux               : 33 34 35
expression           : 9 20 37 51 76 77
expressionaux        : 42
factor               : 56
funcIndicator        : 74
function             : 3
functionaux          : 72
loop                 : 62
main                 : 1
parameter            : 54 72
program              : 0
read                 : 64
readaux              : 84
statement            : 14
term                 : 33 57 58
termaux              : 56 57 58
type                 : 53 54 74 75
vars                 : 2 15
varsaux              : 75 77 79
write                : 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID LFTBRAC auxprogram main RGTBRAC

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID LFTBRAC auxprogram main RGTBRAC

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . LFTBRAC auxprogram main RGTBRAC

    LFTBRAC         shift and go to state 4


state 4

    (1) program -> PROGRAM ID LFTBRAC . auxprogram main RGTBRAC
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (75) vars -> . type varsaux
    (72) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (87) empty -> .
    (66) type -> . INT checkType
    (67) type -> . FLOAT checkType
    (68) type -> . CHAR checkType
    (69) type -> . BOOL checkType
    (70) type -> . STRING checkType

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 87 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 11

    function                       shift and go to state 10
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 8
    type                           shift and go to state 13
    empty                          shift and go to state 9

state 5

    (72) function -> FUNCTION . codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (88) codeScope -> .

    VOID            reduce using rule 88 (codeScope -> .)
    INT             reduce using rule 88 (codeScope -> .)
    FLOAT           reduce using rule 88 (codeScope -> .)
    CHAR            reduce using rule 88 (codeScope -> .)
    BOOL            reduce using rule 88 (codeScope -> .)
    STRING          reduce using rule 88 (codeScope -> .)

    codeScope                      shift and go to state 16

state 6

    (2) auxprogram -> vars . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (75) vars -> . type varsaux
    (72) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (87) empty -> .
    (66) type -> . INT checkType
    (67) type -> . FLOAT checkType
    (68) type -> . CHAR checkType
    (69) type -> . BOOL checkType
    (70) type -> . STRING checkType

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 87 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 11

    function                       shift and go to state 10
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 17
    type                           shift and go to state 13
    empty                          shift and go to state 9

state 7

    (68) type -> CHAR . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 18

state 8

    (1) program -> PROGRAM ID LFTBRAC auxprogram . main RGTBRAC
    (71) main -> . PRIOMH codeScope block

    PRIOMH          shift and go to state 19

    main                           shift and go to state 20

state 9

    (4) auxprogram -> empty .

    PRIOMH          reduce using rule 4 (auxprogram -> empty .)


state 10

    (3) auxprogram -> function . auxprogram
    (2) auxprogram -> . vars auxprogram
    (3) auxprogram -> . function auxprogram
    (4) auxprogram -> . empty
    (75) vars -> . type varsaux
    (72) function -> . FUNCTION codeScope functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (87) empty -> .
    (66) type -> . INT checkType
    (67) type -> . FLOAT checkType
    (68) type -> . CHAR checkType
    (69) type -> . BOOL checkType
    (70) type -> . STRING checkType

    FUNCTION        shift and go to state 5
    PRIOMH          reduce using rule 87 (empty -> .)
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 11

    function                       shift and go to state 10
    vars                           shift and go to state 6
    auxprogram                     shift and go to state 21
    type                           shift and go to state 13
    empty                          shift and go to state 9

state 11

    (70) type -> STRING . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 22

state 12

    (66) type -> INT . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 23

state 13

    (75) vars -> type . varsaux
    (76) varsaux -> . ID codeAddVar EQUAL expression SEMICOLON
    (77) varsaux -> . ID codeAddVar EQUAL expression COMMA varsaux
    (78) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (79) varsaux -> . ID codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux

    ID              shift and go to state 24

    varsaux                        shift and go to state 25

state 14

    (67) type -> FLOAT . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 26

state 15

    (69) type -> BOOL . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 27

state 16

    (72) function -> FUNCTION codeScope . functionaux ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (73) functionaux -> . VOID codeTypeVoid checkType
    (74) functionaux -> . funcIndicator type
    (95) funcIndicator -> .

    VOID            shift and go to state 30
    INT             reduce using rule 95 (funcIndicator -> .)
    FLOAT           reduce using rule 95 (funcIndicator -> .)
    CHAR            reduce using rule 95 (funcIndicator -> .)
    BOOL            reduce using rule 95 (funcIndicator -> .)
    STRING          reduce using rule 95 (funcIndicator -> .)

    functionaux                    shift and go to state 28
    funcIndicator                  shift and go to state 29

state 17

    (2) auxprogram -> vars auxprogram .

    PRIOMH          reduce using rule 2 (auxprogram -> vars auxprogram .)


state 18

    (68) type -> CHAR checkType .

    ID              reduce using rule 68 (type -> CHAR checkType .)


state 19

    (71) main -> PRIOMH . codeScope block
    (88) codeScope -> .

    LFTBRAC         reduce using rule 88 (codeScope -> .)

    codeScope                      shift and go to state 31

state 20

    (1) program -> PROGRAM ID LFTBRAC auxprogram main . RGTBRAC

    RGTBRAC         shift and go to state 32


state 21

    (3) auxprogram -> function auxprogram .

    PRIOMH          reduce using rule 3 (auxprogram -> function auxprogram .)


state 22

    (70) type -> STRING checkType .

    ID              reduce using rule 70 (type -> STRING checkType .)


state 23

    (66) type -> INT checkType .

    ID              reduce using rule 66 (type -> INT checkType .)


state 24

    (76) varsaux -> ID . codeAddVar EQUAL expression SEMICOLON
    (77) varsaux -> ID . codeAddVar EQUAL expression COMMA varsaux
    (78) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (79) varsaux -> ID . codeAddVarArreglo LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux
    (90) codeAddVar -> .
    (91) codeAddVarArreglo -> .

    EQUAL           reduce using rule 90 (codeAddVar -> .)
    LFTBRACSQR      reduce using rule 91 (codeAddVarArreglo -> .)

    codeAddVarArreglo              shift and go to state 33
    codeAddVar                     shift and go to state 34

state 25

    (75) vars -> type varsaux .

    IF              reduce using rule 75 (vars -> type varsaux .)
    WHILE           reduce using rule 75 (vars -> type varsaux .)
    PRINT           reduce using rule 75 (vars -> type varsaux .)
    READ            reduce using rule 75 (vars -> type varsaux .)
    ID              reduce using rule 75 (vars -> type varsaux .)
    INT             reduce using rule 75 (vars -> type varsaux .)
    FLOAT           reduce using rule 75 (vars -> type varsaux .)
    CHAR            reduce using rule 75 (vars -> type varsaux .)
    BOOL            reduce using rule 75 (vars -> type varsaux .)
    STRING          reduce using rule 75 (vars -> type varsaux .)
    RGTBRAC         reduce using rule 75 (vars -> type varsaux .)
    RETURN          reduce using rule 75 (vars -> type varsaux .)
    FUNCTION        reduce using rule 75 (vars -> type varsaux .)
    PRIOMH          reduce using rule 75 (vars -> type varsaux .)


state 26

    (67) type -> FLOAT checkType .

    ID              reduce using rule 67 (type -> FLOAT checkType .)


state 27

    (69) type -> BOOL checkType .

    ID              reduce using rule 69 (type -> BOOL checkType .)


state 28

    (72) function -> FUNCTION codeScope functionaux . ID codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope

    ID              shift and go to state 35


state 29

    (74) functionaux -> funcIndicator . type
    (66) type -> . INT checkType
    (67) type -> . FLOAT checkType
    (68) type -> . CHAR checkType
    (69) type -> . BOOL checkType
    (70) type -> . STRING checkType

    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 11

    type                           shift and go to state 36

state 30

    (73) functionaux -> VOID . codeTypeVoid checkType
    (94) codeTypeVoid -> .

    ID              reduce using rule 94 (codeTypeVoid -> .)

    codeTypeVoid                   shift and go to state 37

state 31

    (71) main -> PRIOMH codeScope . block
    (17) block -> . LFTBRAC blockneutral RGTBRAC

    LFTBRAC         shift and go to state 38

    block                          shift and go to state 39

state 32

    (1) program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .

    $end            reduce using rule 1 (program -> PROGRAM ID LFTBRAC auxprogram main RGTBRAC .)


state 33

    (78) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues SEMICOLON
    (79) varsaux -> ID codeAddVarArreglo . LFTBRACSQR INT RGTBRACSQR EQUAL arrayvalues COMMA varsaux

    LFTBRACSQR      shift and go to state 40


state 34

    (76) varsaux -> ID codeAddVar . EQUAL expression SEMICOLON
    (77) varsaux -> ID codeAddVar . EQUAL expression COMMA varsaux

    EQUAL           shift and go to state 41


state 35

    (72) function -> FUNCTION codeScope functionaux ID . codeNameOfFunct LFTPAREN parameter RGTPAREN blockreturn codeScope
    (93) codeNameOfFunct -> .

    LFTPAREN        reduce using rule 93 (codeNameOfFunct -> .)

    codeNameOfFunct                shift and go to state 42

state 36

    (74) functionaux -> funcIndicator type .

    ID              reduce using rule 74 (functionaux -> funcIndicator type .)


state 37

    (73) functionaux -> VOID codeTypeVoid . checkType
    (89) checkType -> .

    ID              reduce using rule 89 (checkType -> .)

    checkType                      shift and go to state 43

state 38

    (17) block -> LFTBRAC . blockneutral RGTBRAC
    (14) blockneutral -> . statement blockneutral
    (15) blockneutral -> . vars blockneutral
    (16) blockneutral -> . empty
    (60) statement -> . assignment
    (61) statement -> . condition
    (62) statement -> . loop
    (63) statement -> . write
    (64) statement -> . read
    (65) statement -> . call
    (75) vars -> . type varsaux
    (87) empty -> .
    (9) assignment -> . assignmentaux EQUAL expression SEMICOLON
    (18) condition -> . IF conditionaux
    (19) condition -> . IF conditionaux ELSE block
    (51) loop -> . WHILE LFTPAREN expression RGTPAREN block
    (52) write -> . PRINT LFTPAREN constant RGTPAREN SEMICOLON
    (84) read -> . READ LFTPAREN readaux RGTPAREN SEMICOLON
    (80) call -> . ID LFTPAREN exp callaux RGTPAREN SEMICOLON
    (66) type -> . INT checkType
    (67) type -> . FLOAT checkType
    (68) type -> . CHAR checkType
    (69) type -> . BOOL checkType
    (70) type -> . STRING checkType
    (10) assignmentaux -> . ID
    (11) assignmentaux -> . array
    (5) array -> . ID LFTBRACSQR exp RGTBRACSQR

    RGTBRAC         reduce using rule 87 (empty -> .)
    IF              shift and go to state 58
    WHILE           shift and go to state 46
    PRINT           shift and go to state 47
    READ            shift and go to state 45
    ID              shift and go to state 56
    INT             shift and go to state 12
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 7
    BOOL            shift and go to state 15
    STRING          shift and go to state 11
